package edu.stevens.cs562;
public class AggregateFunction {
}