@startuml

' ===========================
'          CLASSES
' ===========================

class Main {
    + main(String[] args)
}

class EMFParser {
    + parse(String raw) : EMFQuery
    - extractSections(String input) : Map
    - parseSelect(String)
    - parseFrom(String)
    - parseWhere(String)
    - parseGroupBy(String)
    - parseGroupingVars(String)
    - parseFVectorsFromSelect(List)
    - parseHaving(String)
}

class EMFQuery {
    + String baseTableName
    + String baseWhereCondition
    + String havingCondition
    + List<GroupingAttribute> groupingAttributes
    + List<GroupingVariable> groupingVariables
    + List<AggregateFunction> aggregateFunctions
    + List<String> selectColumns
}

class GroupingAttribute {
    + String name
}

class GroupingVariable {
    + String name
    + List<String> conditions
    + List<AggregateFunction> aggs
}

class AggregateFunction {
    + String functionName
    + String groupingVarName
    + String attribute
}

class Condition {
    + String left
    + String operator
    + String right
}

class EMFEngine {
    + execute(EMFQuery query, List<Row> rows)
}

class DatabaseFetcher {
    + connect() : Connection
    + fetchAllRows(Connection) : List<Row>
}

class Row {
    + put(String, Object)
    + get(String) : Object
    + toString() : String
}

' ===========================
'       RELATIONSHIPS
' ===========================

Main --> EMFParser : calls
Main --> EMFEngine : calls
Main --> DatabaseFetcher : uses

EMFParser --> EMFQuery : returns

EMFQuery --> GroupingVariable : contains *
EMFQuery --> GroupingAttribute : contains *
EMFQuery --> AggregateFunction : contains *
EMFQuery --> Condition : uses

EMFEngine --> EMFQuery : consumes
EMFEngine --> Row : processes

DatabaseFetcher --> Row : creates list

@enduml